added progress bar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         </p>
       </div>
       <div><p class="alert"></p></div>
+      <div id="timer"></div>
+      <div id="bar-container">
+        <div id="progress-bar"></div>
+      </div>
       <br />
       <div class="table-container" id="board">
         <table class="table">
